k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: e-commerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: salem/e-commerce-server:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: e-commerce
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
