k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-ingress
  namespace: e-commerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: e-commerce.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
